# simpleDiskSpeed

./: CMakeLists.txt
include/: app.h  benchmark.h  semaphore.h
src/: app.cpp  benchmark.cpp  main.cpp  semaphore.cpp
